# configure for xxxx yyyy compile

PATH_REPO=`git rev-parse --show-toplevel`
source ${PATH_REPO}/env.sh

PATH_CUR=`pwd`
PATH_LIB=$PATH_CUR/lib
PATH_XXXX=$PATH_LIB/xxxx
PATH_YYYY=$PATH_LIB/yyyy

# xxxx
if [ ! -d $PATH_XXXX ]; then
    #
    down_load ${BASE_URL}/xxxx-version.tar.bz2 ${PATH_XXXX}
fi
if [ ! -d $PATH_XXXX/prefix ]; then
    cd $PATH_XXXX && \
        ./configure \
            --enable-static \
            --disable-shared \
            --prefix=$PATH_XXXX/prefix \
            && \
        make && make install
fi

# yyyy
if [ ! -d $PATH_YYYY ]; then
    #
    down_load ${BASE_URL}/yyyy-version.tar.bz2 ${PATH_YYYY}
fi
if [ ! -d $PATH_YYYY/prefix ]; then
    cd $PATH_YYYY && \
        ./configure \
            --enable-static \
            --disable-shared \
            --prefix=$PATH_YYYY/prefix \
            && \
        make && make install
fi

