#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(hello,1.0,test@qq.com)
AM_INIT_AUTOMAKE                    # add
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])

# libtoolize
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])         # add
AC_OUTPUT
