#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(helloworld, 0.0.1, dev@helloworld.org)	
AM_INIT_AUTOMAKE		

AC_CONFIG_SRCDIR([src/main.cxx])		# changed
AC_CONFIG_HEADER([config.h]) 

# Checks for programs.
AC_PROG_CXX
AC_PROG_RANLIB					# added

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile 
		    src/Makefile 
		    lib/Makefile]) 	# changed
AC_OUTPUT
