#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT(libhw, 0.0.1, dev@helloworld.org)	

# auxiliary scripts such as "install-sh" are created in the directory:
AC_CONFIG_AUX_DIR(.)				# changed

AM_INIT_AUTOMAKE		

# Checks for programs.
AC_PROG_CXX
AC_PROG_RANLIB					

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile]) 	
AC_OUTPUT
