#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(helloworld, 0.0.1, dev@helloworld.org)	
AM_INIT_AUTOMAKE		
AC_CONFIG_SRCDIR([src/main.cxx])	
AC_CONFIG_HEADER([config.h]) 


# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile]) 	
AC_CONFIG_SUBDIRS([lib])			# added
AC_OUTPUT
