# 	superseeded configure.ac, run: autoupdate

AC_PREREQ(1.55)
AC_INIT([autoupdate_test],[0.0.1],[dev@helloworld.org])	

# 	obsolete macros (names):
AC_ALLOCA  
# AC_ALLOCA new name: AC_FUNC_ALLOCA

AC_CONST
# AC_CONST new name: AC_C_CONST

AC_C_CROSS
# AC_C_CROSS obsolete, it does nothing


AC_CONFIG_FILES([Makefile]) 	
AC_OUTPUT
